--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,15 @@
+sudo: true
+
 language: node_js
-node_js:
-  - '0.11'
+
+services:
+  - docker
+
+before_install:
+  - make build-docker
+
+install:
+  - make npm-install
+
+script:
+  - make test
